test/library/standard/LinkedLists/deitz/aseq/test_aseq2-error.good
test_aseq2-error.chpl:3: error: ambiguous call '+(uint(64), int(64))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: candidates are: +(a: real(32), b: real(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: real(64), b: real(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: complex(64), b: complex(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: complex(128), b: complex(128))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: real(32), b: complex(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: real(64), b: complex(128))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: complex(64), b: real(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:                 +(a: complex(128), b: real(64))
